# the-sovereign-vault-project

./: .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
docs/: README.md  nitro-attestation.md
frontend/: Dockerfile  README.md  package.json  playwright.config.ts  tsconfig.json
frontend/app/: README.md  globals.css  layout.tsx  page.tsx
frontend/components/: README.md  SovereignVaultConsole.tsx  StatusNode.tsx  pipelineState.ts  types.ts
frontend/tests/: README.md  ops-console.spec.ts  pipelineState.test.ts
infra/: README.md
policies/: README.md  clinical-claims-truth.json  deceptive-alignment.json  hipaa-minimum-necessary.json
sanitizer/: Cargo.toml  Dockerfile  README.md
sanitizer/src/: README.md  lib.rs  main.rs
scripts/: README.md  seed-qdrant.mjs
scripts/attestation/: README.md  generate.mjs
state-store/: README.md
vault/: Dockerfile  README.md  requirements-test.txt  requirements.txt
vault/app/: README.md  __init__.py  attestation.py  audit.py  main.py  schemas.py  telemetry.py
vault/tests/: README.md  conftest.py  test_audit.py
vector-db/: README.md
worker/: Dockerfile  README.md  package.json  tsconfig.json  vitest.config.ts
worker/src/: README.md  attestation.ts  contracts.ts  orchestrator.ts  policy.ts  server.ts  store.ts  telemetry.ts
worker/tests/: README.md  attestation.test.ts  contracts.test.ts  orchestrator.test.ts  setup.ts
