[package]
name = "sovereign-sanitizer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
once_cell = "1.21.3"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.1", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.7", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
